# tedii

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  main.ts  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
docs/arch/: architecture.md  data_structure.md  interaction_model.md  roadmap.md
docs/release/: release-engineering-plan.md
docs/superpowers/plans/: 2026-07-14-lsp-hover-docs.md  2026-07-17-zz-center-cursor.md  2026-07-19-base16-eighties-tedii-theme.md  2026-07-19-git-popup-workflow.md  2026-07-19-linewise-paste.md
docs/superpowers/specs/: 2026-07-14-lsp-hover-docs-design.md  2026-07-17-zz-center-cursor-design.md  2026-07-19-base16-eighties-tedii-theme-design.md  2026-07-19-linewise-paste-design.md
plugins/buffer_info/: init.lua
plugins/clock/: init.lua
plugins/event_logger/: init.lua
plugins/hello_world/: init.lua
plugins/keybindings/: init.lua
src/: completion.rs  config.rs  editor.rs  file_explorer.rs  fuzzy.rs  fuzzy_finder.rs  git.rs  git_picker.rs  grammar_commands.rs  hover.rs  lsp.rs  main.rs  overlay.rs  plugin.rs  syntax.rs  theme.rs  tui.rs
study/: 01-COMPONENTS.md  02-INTERACTIONS.md  03-BEHAVIOR.md  04-DATA-MODEL.md  05-UI-MAP.md  06-CONFIGURATION.md  07-LSP-INTEGRATION.md  08-GIT-INTEGRATION.md  09-DEPENDENCY-GRAPH.md  README.md
